# wave

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.c3  tmp
.github/workflows/: test.yml
c3/: cimport.c3  simple  simple.c3  soundio.c3
include/: config.h  filter.h  graphics.h  osc.h  state.h  vec.h  voice.h  wavetable.h
resampler/: analysis.py  resampler.py
scripts/: format.sh  print.sh  run.sh  test.sh
src/: config.c  filter.c  graphics.c  main.c  osc.c  state.c  vec.c  wavetable.c
test/: test_vec.c  test_wavetable.c
tests/: test_osc.c  test_osvec.c  test_vec.c  test_vec_macro.c  test_wavetable.c
